# zap

./: .gitignore  README.md  ZAP.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_deploy.yml
zap/: ABOUT.txt  __init__.py  __main__.py  __meta__.py  album.py  assets.py  binaries.py  dialogues.py  player.py  pyinstaller_entry.py  utils.py  widgets.py  zap.py
